# blog

./: 404.html  CNAME  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
blog/: index.html
blog/2022/08/02/training-dynamics/: index.html
blog/2024/12/04/understanding-the-aida-formula-a-key-to-effective-marketing/: index.html
blog/2025/01/03/wealth-distribution-in-bubbles/: index.html
blog/2025/01/13/why-character-artists-are-embracing-ai-and-why-you-should-too/: index.html
blog/2026/03/29/memory-identity-and-multi-user-agents/: index.html
blog/2026/03/29/memory_and_identity/: index.html
blog/archive/2022/: index.html
blog/archive/2024/: index.html
blog/archive/2025/: index.html
blog/archive/2026/: index.html
blog/posts/ip_character/: index.html
blog/posts/training_dynamics/: index.html
consent/: index.html
contact/: index.html
docs/: consent.md  contact.md  index.md  introductions.md
docs/blog/: .authors.yml  index.md
docs/blog/posts/: ip_character.md  memory_and_identity.md  training_dynamics.md  wealth_distribution_in_bubbles.md
docs/stylesheets/: extra.css
introductions/: index.html
search/: search_index.json
stylesheets/: extra.css
topics/: marketplace.md  memory_and_identity.md
writing-samples/: index.html
